--- a/03_입출력/01_함수.ipynb
+++ b/03_입출력/01_함수.ipynb
@@ -171,7 +171,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 17,
+   "execution_count": null,
    "id": "d0121de2",
    "metadata": {},
    "outputs": [
@@ -186,7 +186,7 @@
    "source": [
     "# 입력값이 몇 개가 될지 모를 때는 어떻게 해야 할까?\n",
     "\n",
-    "# def 함수이름(*매개변수) :\n",
+    "# def 함수이름(*매개변수) :     - *(1개)\n",
     "#     수행할 문장1\n",
     "#     수행할 문장2\n",
     "#     ...\n",
@@ -198,14 +198,235 @@
     "    return result\n",
     "\n",
     "a = add_many(1, 2, 3, 4 ,5)\n",
-    "print(a)\n",
-    "    "
+    "print(a)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 2,
+   "id": "45cac136",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "{'a': 1}\n",
+      "{'name': 'foo', 'age': 3}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 키워드 매개변수, kwargs\n",
+    "## 키워드값의 형태로 매개변수를 받을때  - 매개변수 앞에 **(2개)를 붙인다.\n",
+    "\n",
+    "def print_kwargs(**kwargs) :\n",
+    "    print(kwargs)\n",
+    "\n",
+    "print_kwargs(a = 1)\n",
+    "print_kwargs(name = \"foo\", age = 3)\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 3,
+   "id": "4a049552",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "===== 프로필 정보 =====\n",
+      "이름 : 김철수\n",
+      "나이 : 30\n",
+      "직업 : 개발자\n",
+      "취미 : 운동\n"
+     ]
+    }
+   ],
+   "source": [
+    "def create_profile(**profiles) :\n",
+    "    print(\"===== 프로필 정보 =====\")\n",
+    "    for key, value in profiles.items() :\n",
+    "        print(f\"{key} : {value}\")\n",
+    "\n",
+    "create_profile(이름 = \"김철수\", 나이 = 30, 직업 = \"개발자\", 취미 = \"운동\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 4,
+   "id": "cdaf4d24",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "이름 : 홍길동\n",
+      "추가인수들 : (1, 2, 3, 4, 5)\n",
+      "키워드인수들 : {'age': 25, 'city': '서울'}\n"
+     ]
+    }
+   ],
+   "source": [
+    "# *args, **kwargs 혼용\n",
+    "\n",
+    "def mixed_function(name, *args, **kwargs) :\n",
+    "    print(f\"이름 : {name}\")\n",
+    "    print(f\"추가인수들 : {args}\")\n",
+    "    print(f\"키워드인수들 : {kwargs}\")\n",
+    "\n",
+    "mixed_function(\"홍길동\", 1, 2, 3, 4, 5, age = 25, city = \"서울\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 5,
+   "id": "e6f88257",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "(7, 12)\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add_and_mul(a, b) :\n",
+    "    return a + b, a * b\n",
+    "\n",
+    "result = add_and_mul(3, 4)\n",
+    "print(result)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 10,
+   "id": "9a79d454",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "def say_nick(nick) :\n",
+    "    if nick == \"바보\" :\n",
+    "        return\n",
+    "    print(f\"나의 별명은 {nick}입니다.\")\n",
+    "\n",
+    "# say_nick(\"야호\")\n",
+    "say_nick(\"바보\")"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 13,
+   "id": "3cf254c0",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "나의 이름은 홍길동입니다.\n",
+      "나의 나이는 30살 입니다.\n",
+      "남자입니다.\n",
+      "나의 이름은 영희입니다.\n",
+      "나의 나이는 30살 입니다.\n",
+      "여자입니다.\n"
+     ]
+    }
+   ],
+   "source": [
+    "# 매개변수의 초기값을 미리 설정하기\n",
+    "\n",
+    "def say_myself(name, age, man = True) :\n",
+    "    print(f\"나의 이름은 {name}입니다.\")\n",
+    "    print(f\"나의 나이는 {age}살 입니다.\")\n",
+    "    if man :\n",
+    "        print(\"남자입니다.\")\n",
+    "    else : \n",
+    "        print(\"여자입니다.\")\n",
+    "\n",
+    "say_myself(\"홍길동\", 30)\n",
+    "say_myself(\"영희\", 30, False)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": 15,
+   "id": "6cdf7577",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n"
+     ]
+    }
+   ],
+   "source": [
+    "# lambda 예약어\n",
+    "\n",
+    "# def 함수이름(매개변수) :\n",
+    "#     수행할 문장\n",
+    "#     return\n",
+    "\n",
+    "# def add(a, b) :\n",
+    "#     return a + b\n",
+    "\n",
+    "# lambda\n",
+    "# 함수이름 = lambda 매개변수1, 매개변수2, ... : 수행할 문장\n",
+    "\n",
+    "add = lambda a, b : a + b\n",
+    "\n",
+    "result = add(3, 4)\n",
+    "print(result)"
    ]
   },
   {
    "cell_type": "code",
    "execution_count": null,
-   "id": "45cac136",
+   "id": "5819a0ef",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "7\n",
+      "\n",
+      "함수의 독스트링(Docstring)\n",
+      "두 숫자를 더하는 함수\n",
+      "설명 : 다른 사람 또는 나를 위한 문서\n",
+      "\n"
+     ]
+    }
+   ],
+   "source": [
+    "def add(a, b) :\n",
+    "    \"\"\"\n",
+    "    함수의 독스트링(Docstring)\n",
+    "    두 숫자를 더하는 함수\n",
+    "    설명 : 다른 사람 또는 나를 위한 문서\n",
+    "    \"\"\"\n",
+    "\n",
+    "\n",
+    "\n",
+    "    return a + b\n",
+    "\n",
+    "result = add(3, 4)\n",
+    "print(result)\n",
+    "\n",
+    "print(add.__doc__)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "effc9c4c",
    "metadata": {},
    "outputs": [],
    "source": []
